[tool.poetry]
name = "JKCommentCrawler"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
ndgr-client = { git = "https://github.com/tsukumijima/NDGRClient", rev = "880520f2c98da03450418eeb80d0710b6cf22f94" }

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
