[tool.poetry]
name = "JKCommentCrawler"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
ndgr-client = { git = "https://github.com/tsukumijima/NDGRClient", rev = "92c34cdddf5663a9fdf645ecb1e40b2dd0d6ea65" }

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
